--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/normie_cms
 spring.datasource.username=root
 spring.datasource.password=123456
 
@@ -8,5 +8,5 @@ spring.jpa.generate-ddl=false
 spring.jpa.properties.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.security.user.name=admin
-spring.security.user.password=admin
+jwt.secret = spring-boot-jwt-authentication
+jwt.lifetime = 7200
