--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/normie_cms
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123456
 
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql=true
@@ -11,3 +11,4 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 jwt.secret = spring-boot-jwt-authentication
 jwt.lifetime = 7200
+jwt.refreshExpirationDateInMs = 9000000
